# vendor-qualification-app

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml  readMe.md  test_email.py
app/: agent.py  azure_blob.py  config.py  database.py  document_analysis.py  email.py  email_listener.py  schemas.py
app/constant/: __init__.py  approvals_tracker.py  dashboard.json  dashboard.py  file_data.py
app/routers/: approvals_tracker.py  chat.py  claims.py  dashboard.py  dashboard_chat.py  tracker.py  workflow.py
app/templates/: approve_email.html  missing_documents.html  provider_intimation.html  provider_rejection.html  reject_email.html  simple.html  workflow_notification.html
app/workflows/: claims_workflow.py
scripts/: generate_test_claim_pdfs.py
vendor_qualification_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
